Day 1 Web Changes
Design edits from Saagar

--- a/Baatna_web/index.html
+++ b/Baatna_web/index.html
@@ -84,7 +84,7 @@
                     </div>
 
                     <div class="signup">
-                        <button class="button active">Sign Up fo the preview </button>
+                        <a href="#" data-tab='3'><button class="button active">Coming Soon</button></a>
                     </div>
                 </div>
                 <div class="columns medium-4">
@@ -102,23 +102,25 @@
                 <h1>About</h1>
             </div>
             <ul class="small-block-grid-3">
-                <li class="text-center">
+                <li id="about1" class="text-center">
                     <div class="feature_image"><img src="images/how it works-11.png">
                     </div>
                     <p>Join the community and put up a
                         <br> request for your need</p>
 
                 </li>
-                <li class="text-center">
+                <li id="about2" class="text-center">
                     <div class="feature_image"><img src="images/how it works-12.png">
                     </div>
-                    <p>Coonect and borrow</p>
+                    <p>Conect and borrow from a peer 
+                        <br> who offers your request</p>
 
                 </li>
-                <li class="text-center">
+                <li id="about3" class="text-center">
                     <div class="feature_image"><img src="images/how it works-13.png">
                     </div>
-                    <p>share your goods</p>
+                    <p>Share your goods with others 
+                        <br>and earn rewards</p>
 
                 </li>
             </ul>
@@ -134,32 +136,32 @@
             </div>
 
             <ul class="small-block-grid-4 " data-equalizer>
-                <li class="text-center" data-equalizer-watch>
-                    <div class="feature_image-2"><img src="images/baatna web-06.png">
+                <li id="features1" class="text-center" data-equalizer-watch>
+                    <div class="feature_image-2"><img src="images/icons-05 2.png">
                     </div>
-                    <p>interact and share with only veified users</p>
+                    <p>Interact and share with only <br> verified users</p>
 
                 </li>
-                <li class="text-center" data-equalizer-watch>
-                    <div class="feature_image-2"><img src="images/baatna web-07.png">
+                <li id="features2" class="text-center" data-equalizer-watch>
+                    <div class="feature_image-2"><img src="images/icons-06 2.png">
                     </div>
-                    <p>Set up security amount for expensive products</p>
+                    <p>Set up security amount<br>for expensive products</p>
 
                 </li>
-                <li class="text-center" data-equalizer-watch>
-                    <div class="feature_image-2"><img src="images/baatna web-08.png">
+                <li id="features3" class="text-center" data-equalizer-watch>
+                    <div class="feature_image-2"><img src="images/icons-07 2.png">
                     </div>
-                    <p>Earn coupons and offers on each transaction</p>
+                    <p>Earn coupons and offers on <br>each transaction</p>
                 </li>
-                <li class="text-center highlight_link" data-equalizer-watch>
+                <li id="features4" class="text-center highlight_link" data-equalizer-watch>
                     <div class='show all_features'>
                         <p><a class="toggle_ele"><span>view all features</span> <span class="spacer">&nbsp;&nbsp;&nbsp;></span></a></p>
                     </div>
 
                     <div class="hide all_features">
-                        <div class="feature_image-2"><img src="images/baatna web-09.png">
+                        <div class="feature_image-2"><img src="images/icons-08 2.png">
                         </div>
-                        <p>Connect your social accounts to add credibility</p>
+                        <p>Connect your social accounts <br> to add credibility</p>
 
                     </div>
                 </li>
@@ -169,16 +171,16 @@
                     <li class="text-center">
                         &nbsp;
                     </li>
-                    <li class="text-center">
-                        <div class="feature_image-2"><img src="images/baatna web-10.png">
+                    <li id="features5" class="text-center">
+                        <div class="feature_image-2"><img src="images/icons-09 2.png">
                         </div>
-                        <p>Pickup and Delivery on demand</p>
+                        <p>Pickup and Delivery <br> on demand</p>
 
                     </li>
-                    <li class="text-center">
-                        <div class="feature_image-2"><img src="images/baatna web-11.png">
+                    <li id="features6" class="text-center">
+                        <div class="feature_image-2"><img src="images/icons-10 2.png">
                         </div>
-                        <p>Reminder and updates about the status</p>
+                        <p>Reminder and updates <br> about the status</p>
                     </li>
 
                     <li class="text-center">
@@ -197,8 +199,7 @@
         <div class="row">
             <div class="columns medium-12">
                 <h1>Be the first to try it out</h1>
-                <h5>Sign-up Now for Limited Pre-Registration</h5>
-                <h6>Receive Baatna merchandise and Verified Pioneer Badge on your profile!</h6>
+                <p id="sign-up2">Get a verified pioneer badge on your profile and refer your friends <br> to recieve exclusive Baatna merchandise </p>
 
             </div>
             <form>
@@ -221,8 +222,13 @@
                     </div>
                 </div>
             </form>
+            <div class="referals">
+                <p>Referals coming Soon!</p>
+            </div>
         </div>
     </div>
+
+    <!---
 
     <div id="Confirm_pop" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
         <h2 id="modalTitle">Thanks for signing up for the preview</h2>
@@ -230,6 +236,7 @@
         <a class="close-reveal-modal" aria-label="Close">&#215;</a>
     </div>  
 
+    ---->
 
      <script type="text/javascript">
     $('#signupsubmit').click(function()
@@ -249,15 +256,6 @@
     });
     </script>
 
-    <div class="sect6 text-center">
-        <div class="row">
-            <div class="columns medium-12">
-                <button class="button radius" data-reveal-id="form_pop">Write to Us</button>
-            </div>
-
-        </div>
-    </div>
-    </div>
 
     <div id="form_pop" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
         <h2 id="modalTitle">Would love to hear from you!</h2>
@@ -317,7 +315,7 @@
                         <li><a href="#" class="">About Us</a></li>
                         <li><a href="#" class="">Terms</a></li>
                         <li><a href="#" class="">Privacy</a></li>
-                        <li><a href="#" data-reveal-id="form_pop" class="">Contact</a></li>
+                        <li class="active"><a href="#" data-reveal-id="form_pop">Contact</a></li>
                     </ul>
                 </div>
 
