--- a/Baatna_web/index.html
+++ b/Baatna_web/index.html
@@ -45,7 +45,7 @@
 
 <body>
 
-    <header class="header">
+    <header class="header" data-scroll-speed="3">
         <div class="row">
             <div class="large-3 columns">
                 <h1><a href="index1.html" class=""><img class="logo top_bar"src="images/baatna web-02.png"></a></h1></div>
@@ -64,14 +64,17 @@
     </header>
 
     <div class="outer_wrapper">
+        <div class="illustrations" data-scroll-speed="1">
+            <image src="images/home back-14 2.png"/>
+        </div>
 
 
         <div class="intro">
 
- <div class="phone_container right">
-                        <img class="demo_phone" src="images/baatna web-03.png">
-                    </div>
-            <div class="row">
+            <div class="phone_container right" data-scroll-speed="7">
+                <img class="demo_phone" src="images/baatna web-03.png">
+            </div>
+            <div class="row" data-scroll-speed="7">
                 <div class=" columns medium-8">
                     <div class="hero_desc">
                         <h2>Baatna lets you borrow things</h2>
@@ -96,7 +99,7 @@
     </div>
 
 
-    <div class="sect2" data-section="1">
+    <div class="sect2" data-section="1" data-scroll-speed="7">
         <div class="row">
             <div class="text-center">
                 <h1>About</h1>
@@ -194,7 +197,7 @@
         </div>
     </div>
 
-    <hr>
+    
     <div class="sect4 text-center" data-section="4">
         <div class="row">
             <div class="columns medium-12">
@@ -213,7 +216,7 @@
                                             <input type="email" placeholder="your email id" id="signupemail" name="signupemail" required="true">
                                         </div>
                                         <div class="small-5 columns">
-                                            <input type="submit" id="signupsubmit" value="Sign Up for the preview" class="button postfix" data-reveal-id="confirm_pop" />
+                                            <input type="submit" id="signupsubmit" value="Sign Up for the preview" class="button postfix" data-reveal-id="" />
                                         </div>
                                     </form>
                                 </div>
@@ -332,6 +335,23 @@
             h.style.height = "20px";
             h.style.height = (h.scrollHeight)+"px";
         }
+    </script>
+
+    <script type="text/javascript">
+        $(function(){
+            var boxes = $('[data-scroll-speed]'),
+            $window = $(window);
+            $window.on('scroll', function(){
+                var scrollTop = $window.scrollTop();
+                boxes.each(function(){
+                  var $this = $(this),
+                      scrollspeed = parseInt($this.data('scroll-speed')),
+                      val = - scrollTop / scrollspeed;
+                  $this.css('transform', 'translateY(' + val + 'px)');
+                });
+              });
+            })
+
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/js/foundation.js"></script>
