--- a/Baatna_web/team.html
+++ b/Baatna_web/team.html
@@ -20,9 +20,9 @@
             <div class="large-9 columns">
                 <div class="row right">
                     <ul class="button-group top_padd">
-                        <li><a href="index1.html" data-tab='1' class="button">About</a></li>
-                        <li><a href="index1.html" data-tab='2' class="button">Features</a></li>
-                        <li><a href="https://angel.co/baatna/jobs/" data-tab='3' class="button">Jobs</a></li>
+                        <li><a href="index1.html" data-tab='1' class="button" >About</a></li>
+                        <li><a href="index1.html" data-tab='2' class="button" >Features</a></li>
+                        <li><a href="https://angel.co/baatna/jobs/" data-tab='3' class="button" target="_blank">Jobs</a></li>
                         <li class="active"><a data-tab='4' href="index1.html" class="button active sign_up">Sign Up</a></li>
                     </ul>
                 </div>
@@ -45,7 +45,7 @@
                     
                     <li class="text-center">
                         <figure class="cap-bot">
-                            <a href="https://in.linkedin.com/in/poras" class="">
+                            <a href="https://in.linkedin.com/in/poras" target="_blank" class="">
                                 <div class="person1">
                                 </div>
                                 <figcaption>
@@ -57,7 +57,7 @@
                     
                     <li class="text-center">
                         <figure class="cap-bot">
-                            <a href="https://in.linkedin.com/pub/apoorv-arora/39/54a/37b" class="">
+                            <a href="https://in.linkedin.com/pub/apoorv-arora/39/54a/37b" target="_blank" class="">
                                 <div class="person2">
                                 </div>
                                 <figcaption>
@@ -68,7 +68,7 @@
                     </li>
                     <li class="text-center">
                         <figure class="cap-bot">
-                            <a href="https://in.linkedin.com/in/saagargavri" class="">
+                            <a href="https://in.linkedin.com/in/saagargavri" target="_blank" class="">
                                 <div class="person3">
                                 </div>
                                 <figcaption>
@@ -105,7 +105,7 @@
                         <li><a href="#" class="">Jobs</a></li>
                         <li><a href="#" class="">Blog</a></li>
                         <li><a href="#" class="">About Us</a></li>
-                        <li><a href="#" class="">Terms</a></li>
+                        <li><a href="terms.html" class="">Terms</a></li>
                         <li><a href="#" class="">Privacy</a></li>
                         <li><a href="#" data-tab="3" class="">Contact</a></li>
                     </ul>
