Code cleanup, directory reorg

--- a/Baatna_web/index.html
+++ b/Baatna_web/index.html
@@ -1,5 +1,4 @@
-
-<!DOCTYPE>
+<!DOCTYPE html>
 <html ng-app="myApp">
 
 <head>
@@ -245,7 +244,7 @@
     $('#signupsubmit').click(function()
     {
         $.ajax({
-            url: 'signup.php',
+            url: 'php/signup.php',
             type:'POST',
             data:
             {
@@ -288,7 +287,7 @@
     $('#submit').click(function()
     {
         $.ajax({
-            url: 'contact.php',
+            url: 'php/contact.php',
             type:'POST',
             data:
             {
