--- a/Baatna_web/index.html
+++ b/Baatna_web/index.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/css/foundation.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png"> 
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png"> 
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png"> 
