Reorg, Code cleanup, SQL update

--- a/Baatna_web/index.html
+++ b/Baatna_web/index.html
@@ -39,7 +39,6 @@
     <meta name="msapplication-TileColor" content="#ffffff"> 
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png"> 
     <meta name="theme-color" content="#ffffff">
-
     <title>Baatna</title>
   </head>
 
@@ -272,7 +271,6 @@
         <div class="large-9 columns">
           <div class="row right">
             <ul class="button-group footer_nav">
-
               <li><a href="team.html" class="">Team</a></li>
               <li><a href="#" class="">About Us</a></li>
               <li><a href="#" class="">Terms</a></li>
@@ -285,10 +283,9 @@
       </div>
     </footer>
 
-
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/js/foundation.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/other.js"></script>
   </body>
-
 </html>
