--- a/Baatna_web/index.html
+++ b/Baatna_web/index.html
@@ -86,7 +86,7 @@
             </div>
 
             <div class="signup">
-              <a href="#" data-tab='3'><button class="button active">Coming Soon</button></a>
+              <a href="#signupForm" data-tab='3'><button class="button active">Signup For Early Access</button></a>
             </div>
           </div>
           <div class="columns medium-4">
@@ -223,7 +223,7 @@
             </div>
           </div>
         <div class="referals">
-          <p>Referals coming Soon!</p>
+          <p>Selected successful referrals will get merchandise!</p>
         </div>
       </div>
     </div>
