--- a/Baatna_web/team.html
+++ b/Baatna_web/team.html
@@ -54,7 +54,7 @@
                             </a>
                         </figure>
                     </li>
-                    
+
                     <li class="text-center">
                         <figure class="cap-bot">
                             <a href="https://in.linkedin.com/pub/apoorv-arora/39/54a/37b" class="">
@@ -66,10 +66,24 @@
                             </a>
                         </figure>
                     </li>
+
+                    <li class="text-center">
+                        <figure class="cap-bot">
+                            <a href="https://in.linkedin.com/in/muthu-raman-21b7991b" class="">
+                                <div class="person3">
+                                </div>
+                                <figcaption>
+                                    Muthu Raman
+                                </figcaption>
+                            </a>
+                        </figure>
+                    </li>
+
+
                     <li class="text-center">
                         <figure class="cap-bot">
                             <a href="https://in.linkedin.com/in/saagargavri" class="">
-                                <div class="person3">
+                                <div class="person4">
                                 </div>
                                 <figcaption>
                                     Saagar Gavri
