--- a/Baatna_web/team.html
+++ b/Baatna_web/team.html
@@ -49,7 +49,7 @@
                                 <div class="person1">
                                 </div>
                                 <figcaption>
-                                    Kumar Poras
+                                    Kumar Poras (Founder & Chief Executive Officer)
                                 </figcaption>
                             </a>
                         </figure>
@@ -61,7 +61,7 @@
                                 <div class="person2">
                                 </div>
                                 <figcaption>
-                                    Apoorv Arora
+                                    Apoorv Arora (Founder & Technology Lead)
                                 </figcaption>
                             </a>
                         </figure>
@@ -73,7 +73,7 @@
                                 <div class="person3">
                                 </div>
                                 <figcaption>
-                                    Muthu Raman
+                                    Muthu Raman (Founder & Chief Marketing Officer)
                                 </figcaption>
                             </a>
                         </figure>
@@ -86,7 +86,7 @@
                                 <div class="person4">
                                 </div>
                                 <figcaption>
-                                    Saagar Gavri
+                                    Saagar Gavri (Founder  & Design Lead)
                                 </figcaption>
                             </a>
                         </figure>
