--- a/Dashboard/nav.html
+++ b/Dashboard/nav.html
@@ -10,10 +10,10 @@
 <body>
 	<nav>
 		<ul>
-			<li><a href="wel2.php">User Page</a></li>
-			<li><a href="basicdetailnew.php">Basic Details</a></li>
-			<li><a href="lending_history.php">Lending History</a></li>
-			<li><a href="need_list2_button_corrected.php">Need List</a></li>
+			<li><a target="_blank" href="wel2.php">User Page</a></li>
+			<li><a target="_blank" href="basicdetailnew.php">Basic Details</a></li>
+			<li><a target="_blank" href="lending_history.php">Lending History</a></li>
+			<li><a target="_blank" href="need_list2_button_corrected.php">Need List</a></li>
 		</ul>
 	</nav>
 </body>
