--- a/Baatna_web/careers.html
+++ b/Baatna_web/careers.html
@@ -44,6 +44,7 @@
         document.createElement('video');
       </script>
     <![endif]-->
+    <link rel='icon' href='assets/images/favicon.ico' type='image/x-icon'/ >
     <script data-startup="baatna" src="https://angel.co/javascripts/embed_jobs.js" async></script>
 
 </head>
@@ -53,7 +54,7 @@
             <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
                 <div class="container">
                     <div class="navbar-header pull-left">
-                        <a class="navbar-brand page-scroll" href="#page-top">
+                        <a class="navbar-brand page-scroll" href="index.html">
                             <!-- replace with your brand logo/text -->
                             <span class="brand-logo"><img src="assets/images/baatna.jpg" width="100px" height="50px"onerror="this.src='assets/images/baatna.jpg'; this.onerror=null;" alt="Baatna" title="Baatna" class="img-responsive"></span>
                         </a>
