--- a/Baatna_web/privacy.html
+++ b/Baatna_web/privacy.html
@@ -44,7 +44,7 @@
         document.createElement('video');
       </script>
     <![endif]-->
-   
+   <link rel='icon' href='assets/images/favicon.ico' type='image/x-icon'/ >
 
 </head>
 
@@ -53,7 +53,7 @@
             <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
                 <div class="container">
                     <div class="navbar-header pull-left">
-                        <a class="navbar-brand page-scroll" href="#page-top">
+                        <a class="navbar-brand page-scroll" href="index.html">
                             <!-- replace with your brand logo/text -->
                             <span class="brand-logo"><img src="assets/images/baatna.jpg" width="100px" height="50px"onerror="this.src='assets/images/baatna.jpg'; this.onerror=null;" alt="Baatna" title="Baatna" class="img-responsive"></span>
                         </a>
@@ -114,12 +114,11 @@
 
 
             <!-- Contact section -->
-            <section id="contact" class="contact content-section no-bottom-pad wow fadeIn" data-wow-offset="10">
+            <section id="privacy" class="contact content-section no-bottom-pad wow fadeIn" data-wow-offset="10">
                 <div class="container">
                     <div class="row text-center">
                         <div class="col-md-12">
-                            <h1 class="black1">Privacy Policy
-</h1>
+                            <h1>Privacy Policy</h1>
                             
                         </div>
                         <div class="col-md-12">
