new updated website

--- a/Baatna_web/careers.html
+++ b/Baatna_web/careers.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Baatna.com</title>
+    <title>Baatna</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -69,15 +69,15 @@
                     <div class="overlay" id="overlay">
                         <nav class="overlay-menu">
                             <ul>
-                                 <li><a href="#clients">Crowd Funding</a></li>
-                                <li><a href="#about">About us</a></li>
-                                <li><a href="#services">How does it work?</a></li>
-                                <li><a href="#products">Why Baatna is Awesome</a></li>
-                                <li><a href="#team">Our Team</a></li>
-                                <li><a href="privacy.html">Privacy Policy</a></li>
-                                <li><a href="terms.html">Terms And Conditions</a></li>
-                                <li><a href="#clients">Careers</a></li>
-                                <li><a href="#contact">Contact us</a></li>
+                                 <li><a href="#crowdfunding">Crowd Funding</a></li>
+                                <li><a href="index.html#about">About us</a></li>
+                                <li><a href="index.html#services">How does it work?</a></li>
+                                <li><a href="index.html#products">Why Baatna is Awesome</a></li>
+                                <li><a href="team.html">Our Team</a></li>
+                                <li><a href="faq.html">FAQ's</a></li>
+                                
+                                <li><a href="#career">Careers</a></li>
+                                <li><a href="index.html#contact">Contact us</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -85,10 +85,11 @@
             </nav>
 
 
-
-        <div id="angellist_embed" data-startup="baatna"></div>
-
+        <section id="career" class="team content-section">
+            <div id="angellist_embed" data-startup="baatna"></div>
+        </section>
             <!-- Footer -->
+             <!-- Footer -->
             <footer>
                 <div class="container">
                     <div class="row text-center">
@@ -96,30 +97,37 @@
                             <a href="http://baatna.com" title="baatna">
                                 <h2>
                                     <!-- replace with your brand logo/text -->
-                                    <img src="assets/images/baatna_image.png" width="30%" height="30%" onerror="this.src='assets/images/baatna_image.png'; this.onerror=null;" alt="baatna" title="baatna" class="img-responsive">
+                                    <img src="assets/images/baatna_image.png" width="20%" height="20%" onerror="this.src='assets/images/baatna_image.png'; this.onerror=null;" alt="baatna" title="baatna" class="img-responsive">
                                 </h2>
                             </a>
-                            <p class="white">Our aim is to disrupt the concept of ownership and bring a reform in the sharing space.</p>
+                            <h6 class="white">Our aim is to disrupt the concept of ownership and bring a reform in the sharing space.</h6>
                         </div><!-- /.col-md-12 -->
                     </div><!-- /.row -->
 
                     <div class="row text-center">
                         <div class="col-md-12 social segment">
-                            <h4>Stay Connected</h4>
+                            <h5 class="white">Stay Connected</h5>
                             <a href="https://www.facebook.com/baatna/?fref=ts"><i class="fa fa-facebook fa-3x"></i></a>
                             <a href="https://twitter.com/BaatnaCommunity"><i class="fa fa-twitter fa-3x"></i></a>
-                            <a href="#"><i class="fa fa-linkedin fa-3x"></i></a>
+                            <a href="https://www.linkedin.com/company/6446429?trk=tyah&trkInfo=clickedVertical%3Acompany%2CclickedEntityId%3A6446429%2Cidx%3A1-1-1%2CtarId%3A1450960004764%2Ctas%3Abaatna"><i class="fa fa-linkedin fa-3x"></i></a>
                         </div><!-- /.col-md-12 -->
                     </div><!-- /.row -->
 
                 </div><!-- /.container -->
 
-                <div class="copynote">
+                 <div class="copynote">
                     <div class="container">
                         <div class="row">
-                            <div class="col-md-12 text-center">
+                             <div class="col-md-2 text-center">
+                                <a href="privacy.html">Privacy policy</a>
+                            </div><!-- /.col-md-12 -->
+                            <div class="col-md-8 text-center">
                                 &copy; 2015. Baatna. All rights reserved.
                             </div><!-- /.col-md-12 -->
+                            <div class="col-md-2 text-center">
+                               <a href="terms.html"> Terms &amp; conditions</a>
+                            </div><!-- /.col-md-12 -->
+                           
 
                         </div><!-- /.row -->
                     </div><!-- /.container -->
