--- a/Baatna_web/team.html
+++ b/Baatna_web/team.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Baatna.com</title>
+    <title>Baatna</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -73,8 +73,8 @@
                                 <li><a href="index.html#services">How does it work?</a></li>
                                 <li><a href="index.html#products">Why Baatna is Awesome</a></li>
                                 <li><a href="#team">Our Team</a></li>
-                               
-                                <li><a href="#clients">Careers</a></li>
+                               <li><a href="faq.html">FAQ's</a></li>
+                                <li><a href="careers.html">Careers</a></li>
                                 <li><a href="index.html#contact">Contact us</a></li>
                             </ul>
                         </nav>
@@ -193,13 +193,13 @@
                                     <img src="assets/images/baatna_image.png" width="20%" height="20%" onerror="this.src='assets/images/baatna_image.png'; this.onerror=null;" alt="baatna" title="baatna" class="img-responsive">
                                 </h2>
                             </a>
-                            <p class="white">Our aim is to disrupt the concept of ownership and bring a reform in the sharing space.</p>
+                            <h6 class="white">Our aim is to disrupt the concept of ownership and bring a reform in the sharing space.</h6>
                         </div><!-- /.col-md-12 -->
                     </div><!-- /.row -->
 
                     <div class="row text-center">
                         <div class="col-md-12 social segment">
-                            <h4>Stay Connected</h4>
+                            <h5 class="white">Stay Connected</h5>
                             <a href="https://www.facebook.com/baatna/?fref=ts"><i class="fa fa-facebook fa-3x"></i></a>
                             <a href="https://twitter.com/BaatnaCommunity"><i class="fa fa-twitter fa-3x"></i></a>
                             <a href="https://www.linkedin.com/company/6446429?trk=tyah&trkInfo=clickedVertical%3Acompany%2CclickedEntityId%3A6446429%2Cidx%3A1-1-1%2CtarId%3A1450960004764%2Ctas%3Abaatna"><i class="fa fa-linkedin fa-3x"></i></a>
@@ -211,13 +211,13 @@
                  <div class="copynote">
                     <div class="container">
                         <div class="row">
-                             <div class="col-md-2 text-right">
+                             <div class="col-md-2 text-center">
                                 <a href="privacy.html">Privacy policy</a>
                             </div><!-- /.col-md-12 -->
                             <div class="col-md-8 text-center">
                                 &copy; 2015. Baatna. All rights reserved.
                             </div><!-- /.col-md-12 -->
-                            <div class="col-md-2 text-left">
+                            <div class="col-md-2 text-center">
                                <a href="terms.html"> Terms &amp; conditions</a>
                             </div><!-- /.col-md-12 -->
                            
