new updated website

--- a/Baatna_web/index.html
+++ b/Baatna_web/index.html
@@ -361,7 +361,7 @@
                                 </div>
                                      <div class="item">
                                         <article class="speech text-center">
-                                            <h4>4.Do you have more in mind ?</h4>>
+                                            <h4>4.Do you have more in mind ?</h4>
                                             <a target="_blank" href="faq.html" class="btn btn-default btn-lg">Read More</a>
                                             </article>
                                         </div><!-- /.item -->
