--- a/Baatna_web/index.html
+++ b/Baatna_web/index.html
@@ -53,11 +53,11 @@
 <body id="home">
             <!-- Navigation -->
             <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-                <div class="container">
+                <div id="#page-top" class="container">
                     <div class="navbar-header pull-left">
-                        <a class="navbar-brand page-scroll" href="#page-top">
+                        <a class="navbar-brand page-scroll" href="#home">
                             <!-- replace with your brand logo/text -->
-                            <span class="brand-logo"><img src="assets/images/baatna.jpg" width="100px" height="50px"onerror="this.src='assets/images/baatna.jpg'; this.onerror=null;" alt="Baatna" title="Baatna" class="img-responsive"></span>
+                            <span class="brand-logo"><img src="assets/images/baatna.jpg" width="100px" onerror="this.src='assets/images/baatna.jpg'; this.onerror=null;" alt="Baatna" title="Baatna" class="img-responsive img-size"></span>
                         </a>
                     </div>
                     <div class="main-nav pull-right">
@@ -342,7 +342,7 @@
                                     <div class="client-testimonials owl-carousel owl-theme">
 
                                         <div class="item">
-                                            <article class="speech text-left"><h4 class="text-center">1.  What does Baatna do?</h4>Baatna is a platform that allows you to borrow things from people around you. You can post your need and borrow any consumer good such as - travel bag, gym equipment or juice maker etc. on the application. We will broadcast your needs to people in your neighborhood, your friends and other people in your community who can help you, you can then interact using our app and fulfill your need.</article>
+                                            <article class="speech text-left"><h4 class="text-center">1.  What does Baatna do?</h4><p>Baatna is a platform that allows you to borrow things from people around you. You can post your need and borrow any consumer good such as - travel bag, gym equipment or juice maker etc. on the application. We will broadcast your needs to people in your neighborhood, your friends and other people in your community who can help you, you can then interact using our app and fulfill your need.</p></article>
                                            
                                         </div><!-- /.item -->
 
