--- a/Baatna_web/crowdfunding.html
+++ b/Baatna_web/crowdfunding.html
@@ -75,7 +75,7 @@
                                 <li><a href="index.html#products">Why Baatna is Awesome</a></li>
                                 <li><a href="team.html">Our Team</a></li>
                                <li><a href="faq.html">FAQ's</a></li>
-                                <li><a href="#careers.html">Careers</a></li>
+                                <li><a href="careers.html">Careers</a></li>
                                 <li><a href="index.html#contact">Contact us</a></li>
                             </ul>
                         </nav>
